# mwe_clang_tidy

./: CMakeLists.txt  CMakePresets.json  main.cpp  my_lib.cppm
.github/workflows/: CMakePresets.json  test.yml
